--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 body {
-    box-sizing : border-box;
-    width: 100vw;
-    height: 100vh;
+    // box-sizing : border-box;
+    width: 90vw;
+    height: 90vh;
     padding: 3% 3% 7% 7%;
     background-color: #222831;
     font-family: 'Audiowide', sans-serif, serif, cursive;
@@ -17,7 +17,7 @@ body {
     grid-gap: 40px;
     height: 70vh;
     .left {
-        box-sizing: border-box;
+        //box-sizing: border-box;
         display: flex;
         flex-direction: column;
         align-items: center;
