--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 body {
     // box-sizing : border-box;
-    width: 90vw;
+    padding: 0;
+    width: 95vw;
     height: 90vh;
     padding: 3% 3% 7% 4%;
     overflow: hidden;
