--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body {
     // box-sizing : border-box;
-    padding: 0;
+    margin: 0;
     width: 95vw;
     height: 90vh;
     padding: 3% 3% 7% 4%;
