--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   margin: 0;
-  width: 98vw;
-  height: 90vh;
+  width: 90vw;
+  height: 100vh;
   padding: 3% 3% 7% 4%;
   overflow: hidden;
   background-color: #222831;
