--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,8 @@
 body {
-    // box-sizing : border-box;
+    box-sizing: content-box;
     margin: 0;
-    width: 98vw;
-    height: 90vh;
+    width: 90vw;
+    height: 100vh;
     padding: 3% 3% 7% 4%;
     overflow: hidden;
     background-color: #222831;
