--- a/style.css
+++ b/style.css
@@ -174,4 +174,10 @@ body {
           box-shadow: 5px 5px 15px #1a1e25, -5px -5px 15px #2a323d;
   margin: 5px 10px;
 }
+
+.main-section .right .keyboard .pressed {
+  background: #1b1c20;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 /*# sourceMappingURL=style.css.map */
