--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   font-size: 20px;
   border: none;
   outline: none;
-  color: #4e535a;
+  color: #bbbfca;
   font-weight: bold;
   font-family: 'Audiowide', cursive;
   border-radius: 20px;
@@ -60,16 +60,18 @@ body {
 
 .main-section .left .btn:active {
   border-radius: 20px;
-  background: linear-gradient(145deg, #1f242c, #242b34);
-  -webkit-box-shadow: 9px 9px 15px #1a1e25, -9px -9px 15px #2a323d;
-          box-shadow: 9px 9px 15px #1a1e25, -9px -9px 15px #2a323d;
+  background: linear-gradient(145deg, #242b34, #1a212b, #242b34);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-box-shadow: inset(9px 9px 10px #353c49, -9px -9px 10px #323b47);
+          box-shadow: inset(9px 9px 10px #353c49, -9px -9px 10px #323b47);
 }
 
 .main-section .left .clock {
   height: 150px;
   width: 150px;
   font-size: 20px;
-  color: #4e535a;
+  color: #bbbfca;
   border: none;
   border-radius: 20px;
   background: linear-gradient(145deg, #1f242c, #242b34);
@@ -97,8 +99,8 @@ body {
 .main-section .right {
   border-radius: 40px;
   background: #222831;
-  -webkit-box-shadow: -17px -17px 34px #1f242c, 17px 17px 34px #252c36;
-          box-shadow: -17px -17px 34px #1f242c, 17px 17px 34px #252c36;
+  -webkit-box-shadow: -17px -17px 34px #2c3541a1, 17px 17px 34px #1c2027;
+          box-shadow: -17px -17px 34px #2c3541a1, 17px 17px 34px #1c2027;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
