Changed display color of correctly typed letters

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body {
 }
 
 .main-section .right .paragraph .content .typed {
-  color: #34626c;
+  color: #3e4149;
 }
 
 .main-section .right .paragraph .content .wrong {
