--- a/style.scss
+++ b/style.scss
@@ -109,7 +109,7 @@ body {
                     color: #f4f4f2cb;
                 }
                 .typed {
-                    color : #34626c;
+                    color : #3e4149;
                 }
                 .wrong {
                     color : #f05454;
