--- a/style.css
+++ b/style.css
@@ -140,6 +140,45 @@ body {
       justify-content: space-around;
 }
 
+.main-section .right .evaluation {
+  width: 100%;
+  height: 20px;
+  padding: 0;
+  margin: 5px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 30px;
+  color: #bbbfca;
+}
+
+.main-section .right .evaluation .hidden {
+  display: none;
+}
+
+.main-section .right .evaluation #speed-val {
+  color: #d89216;
+  margin: 0;
+  margin-right: 50px;
+  margin-left: 15px;
+}
+
+.main-section .right .evaluation #score-val {
+  color: #61b15a;
+  margin: 0;
+  margin-left: 15px;
+}
+
 .main-section .right .paragraph {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
