--- a/style.scss
+++ b/style.scss
@@ -96,6 +96,33 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        .evaluation {
+            width: 100%;
+            height: 20px;
+            padding: 0;
+            margin: 5px 0;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            font-size: 30px;
+            color: #bbbfca;
+            .hidden {
+                display: none;
+            }
+            #speed-val {
+                color : #d89216;
+                margin: 0;
+                margin-right: 50px;
+                margin-left: 15px;
+            }
+            #score-val {
+                color : #61b15a;
+                margin: 0;
+                margin-left: 15px;
+            }
+            
+        }
         .paragraph {
             box-sizing: border-box;
             width: 100%;
